[project]
name = "llm-pilot-playbook-dashboard"
version = "0.1.0"
description = "Sales-style dashboard for LLM pilot patterns (RAG, summarization, classification)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.41.0",
    "pydantic>=2.9.0",
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
